# agentic-news-generator

./: .claudeignore  .env.template  .gitignore  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  ARCHIVE-GUIDE.md  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  HOW-TO-SEARCH.md  README.md  TROUBLESHOOTING-GUIDE.md  TROUBLESHOOTING.md  justfile  pyproject.toml  pyrightconfig.json
.claude/commands/: commit-to-git.md  review-changes.md  test.md
config/: config.test.yaml  config.yaml  config.yaml.template  filefilter.json.template
config/codespell/: ignore.txt
config/semgrep/: convention-violations.yml  justfile-no-error-suppression.yml  naming-conventions.yml  no-conditional-assignment-fallback.yml  no-default-values.yml  no-noqa.yml  no-sneaky-fallbacks.yml  no_type_suppression.yml  python-constants.yml
docs/: article-editor-agent-requirements-implementation-plan.md  article-editor-agent-requirements.md  magnetic_topics.md  topic-detection.md
docs/implementation-specs/: agent-unit-tests.md  orchestrator-unit-tests.md
docs/lightningtalk/: project-blitz.md
docs/plans/: 2026-03-05-config-driven-agent-factory-e2e-tests-design.md  2026-03-05-config-driven-agent-factory-e2e-tests.md
docs/snapshots/: 2026-03-15-data-directory-io-patterns.md
docs/specs/: article-editor-agents-test-implementation-specification.md  article-editor-attribution-agent-specification.md  article-editor-attribution-agent-test-specification.md  article-editor-concern-mapping-agent-specification.md  article-editor-concern-mapping-agent-test-specification.md  article-editor-evidence-finding-agent-specification.md  article-editor-evidence-finding-agent-test-specification.md  article-editor-fact-check-agent-specification.md  article-editor-fact-check-agent-test-specification.md  article-editor-opinion-agent-specification.md  article-editor-opinion-agent-test-specification.md  article-editor-orchestration-specification.md  article-editor-orchestration-test-implementation-specification.md  article-editor-orchestration-test-specification.md  article-editor-review-agent-specification.md  article-editor-review-agent-test-specification.md  article-editor-style-review-agent-specification.md  article-editor-style-review-agent-test-specification.md  article-editor-writer-agent-specification.md  article-editor-writer-agent-test-specification.md  config-path-resolution-remaining-domains-specification.md  config-path-resolution-remaining-domains-test-implementation-specification.md  config-path-resolution-remaining-domains-test-specification.md  config-path-resolution-specification.md  (+2 more)
notebooks/: analyze-test-examples.py  hallucination_analysis.ipynb  hallucination_classifier.pkl  hallucination_classifier_linear.py  hallucination_classifier_quadratic.pkl  hallucination_classifier_quadratic.py  hallucination_classifier_svm.pkl  hallucination_classifier_svm.py  train-hallucination-classifier-quadratic.py  train-hallucination-classifier-svm.py  train-hallucination-classifier.py
prompts/: detect-topic-boundaries-from-txt.md  extract-topic-boundaries.md  format-url-content.md  summarize-transcript.md
scripts/: analyze_model_performance.py  append-membersonly-to-archive.py  archive-videos.sh  audio-hours.py  channel-time-total.py  check-audio-track.sh  check-missing-metadata.py  check-orphaned-downloads.py  check_video_integrity.py  check_video_integrity.sh  clean-video-files.py  cleanup-empty-transcripts.sh  cleanup-plain-filename-duplicates.py  compile_articles.py  config.sh  convert_to_audio.sh  create-hallucination-digest.py  delete-old-topic-trees.py  detect-boundaries.py  detect-topic-boundaries.py  disk-free.py  download-fasttext-models.sh  export-files.sh  export-to-minirag.py  extract-topics.py  fetch-video-metadata.py  fetch-video-metadata.sh  fetch-video-thumbnail.sh  fetch-video-thumbnails.py  filter-short-videos.py  find-and-clean-empty-data-files.py  find-empty-transcripts.sh  find-files-with-filtered-video-ids.py  find-files-without-youtube-id.py  find-files.sh  find-partial-downloads.sh  generate-articles.py  generate-embeddings.py  group-channels-by-language.py  init-directories.sh  (+31 more)
scripts/analytics/: index.py  (+4 more)
src/: config.py  file_processing_filter.py  main.py
stubs/: fasttext.pyi  frontmatter.pyi  litellm.pyi  srt.pyi
tests/: test_acm_ccs_loader.py  test_agent_factory.py  test_analytics_config.py  test_analytics_digest.py  test_analytics_ids.py  test_analytics_index_builder.py  test_analytics_integration.py  test_analytics_metadata_reader.py  test_analytics_publication_timeseries.py  test_analytics_report_writer.py  test_analytics_text_normalize.py  test_analytics_theme_ranker.py  test_analytics_timeline_builder.py  test_article_generation_config.py  test_article_parser.py  test_article_review_agent.py  test_article_review_bullet_parser.py  test_attribution_agent.py  test_bundle_loader.py  test_chief_editor_orchestrator.py  test_cleanup_plain_filename_duplicates.py  test_concern_mapping_agent.py  test_config.py  test_config_data_dir.py  test_config_path_conventions.py  test_config_path_resolution.py  test_embedding_client.py  test_evidence_finding_agent.py  test_fact_check_agent.py  test_file_processing_filter.py  test_find_files_without_youtube_id.py  test_hallucination_relative_paths.py  test_indexer.py  test_institutional_memory_store.py  test_keyphrase_extractors.py  test_language_detector.py  test_llm_and_summarize_config.py  test_llm_client.py  test_llm_lm_studio.py  test_llm_topic_labeler.py  (+48 more)
(+312 files in other folders)
